[package]
name = "acoustix"
version = "0.1.0"
edition = "2024"
description = "A high-performance objective speech validation library for Text-to-Speech (TTS) AI models (implements MCD, DTW, LSD, SegSNR, and automated model ranking)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ernestas/acoustix"
keywords = ["speech", "audio", "tts", "metrics", "validation"]
categories = ["multimedia::audio", "science", "development-tools"]

[dependencies]
hound = "3.5"
rustfft = "6.2"
num-complex = "0.4"
thiserror = "2"
