[package]
name = "acoustix"
version = "0.1.0"
edition = "2024"
description = "A high-performance objective speech validation library for Text-to-Speech (TTS) AI models (implements MCD, DTW, LSD, SegSNR, and automated model ranking)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ernestas/acoustix"
keywords = ["speech", "audio", "tts", "metrics", "validation"]
categories = ["multimedia::audio", "science", "development-tools"]

[dependencies]
hound = { version = "3.5.1", optional = true }
rustfft = "6.2.0"
num-complex = "0.4.6"
thiserror = "2"

[features]
default = ["wav"]
wav = ["dep:hound"]
